--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,14 @@
         <!--<mybatis.version>3.2.6</mybatis.version>-->
         <!--<mybatis-spring.version>1.2.2</mybatis-spring.version>-->
 
+        <spring.version>4.3.5.RELEASE</spring.version>
+        <mybatis.version>3.4.2</mybatis.version>
+        <mybatis-spring.version>1.3.1</mybatis-spring.version>
         <!--2016-02-20切换到spring3试试-->
         <!--mybatis官网：http://blog.mybatis.org/2016/02/mybatis-331-and-mybatis-spring-124.html,在2016-02-13发布了3.3.1版本-->
-        <spring.version>3.2.16.RELEASE</spring.version>
-        <mybatis.version>3.3.1</mybatis.version>
-        <mybatis-spring.version>1.2.4</mybatis-spring.version>
+        <!--<spring.version>3.2.16.RELEASE</spring.version>-->
+        <!--<mybatis.version>3.3.1</mybatis.version>-->
+        <!--<mybatis-spring.version>1.2.4</mybatis-spring.version>-->
 
 
         <!--下面这两个是springAOP需要用到-->
@@ -54,7 +57,7 @@
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
 
         <httpclient.version>4.3.3</httpclient.version>
-        <jackson-databind.version>2.4.2</jackson-databind.version>
+        <jackson-databind.version>2.5.2</jackson-databind.version>
         <fastjson.version>1.1.43</fastjson.version>
         <!--架包版本变量 end-->
 
@@ -74,6 +77,7 @@
         <!--插件版本变量 end-->
 
         <!--其他变量 start-->
+
         <war-name.version>ssm</war-name.version>
         <jdk.version>1.7</jdk.version>
 
